@@ -21,6 +21,10 @@
 #endif
 
 #ifdef __USE_GNU
+/* Flags for mremap.  */
+# define MREMAP_MAYMOVE	1
+# define MREMAP_FIXED	2
+
 /* Flags for memfd_create.  */
 # ifndef MFD_CLOEXEC
 #  define MFD_CLOEXEC 1U
